WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140597
Fix style issues and add availability macros missed in
r178634
https://bugs.webkit.org/show_bug.cgi?id=140597
Summary
Fix style issues and add availability macros missed in r178634
Sam Weinig
Reported
2015-01-18 14:12:33 PST
Fix style issues and add availability macros missed in
r178634
Attachments
Patch
(2.78 KB, patch)
2015-01-18 14:13 PST
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2015-01-18 14:13:37 PST
Created
attachment 244866
[details]
Patch
Sam Weinig
Comment 2
2015-01-18 14:16:31 PST
Committed
r178635
: <
http://trac.webkit.org/changeset/178635
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug