Fix style issues and add availability macros missed in r178634 https://bugs.webkit.org/show_bug.cgi?id=140597

Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKUserContentControllerPrivate.h:
Add missing availability macros.

* UIProcess/API/Cocoa/_WKUserContentFilter.h:
* UIProcess/API/Cocoa/_WKUserContentFilter.mm:
(-[_WKUserContentFilter initWithName:serializedRules:]):
(-[_WKUserContentFilter _initWithName:serializedRules:]): Deleted.
Removed unnecessary leading underscore from init method.


Canonical link: https://commits.webkit.org/158568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178635 268f45cc-cd09-0410-ab3c-d52691b4dbfc